migration/argo_migrate/service.yml
apiVersion: v1
kind: Service
metadata:
  name: argo-rest-api
spec:
  selector:
    app: argo-rest-api
  ports:
  - name: traffic
    port: 9000
    targetPort: 9000
    protocol: TCP
  type: ClusterIP
